# poweramp-helper

./: .gitignore  Cargo.toml  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kaeonx/poweramphelper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kaeonx/poweramphelper/: MainActivity.kt  PowerampHelperApp.kt
app/src/main/java/com/kaeonx/poweramphelper/database/: AppDatabase.kt  KeyStringValuePair.kt  KeyStringValuePairDAO.kt  KeyStringValuePairRepository.kt  MusicFile.kt  MusicFileDAO.kt  MusicFileRepository.kt  MusicFolder.kt  MusicFolderDAO.kt  MusicFolderRepository.kt
app/src/main/java/com/kaeonx/poweramphelper/ui/: PHDestination.kt
app/src/main/java/com/kaeonx/poweramphelper/ui/screens/home/: HomeScreen.kt  HomeScreenState.kt  HomeScreenViewModel.kt
app/src/main/java/com/kaeonx/poweramphelper/ui/screens/language/: LanguageScreen.kt  LanguageScreenSortOption.kt  LanguageScreenState.kt  LanguageScreenViewModel.kt
app/src/main/java/com/kaeonx/poweramphelper/ui/screens/languageFolder/: LanguageFolderScreen.kt  LanguageFolderScreenState.kt  LanguageFolderScreenViewModel.kt
app/src/main/java/com/kaeonx/poweramphelper/ui/screens/rating/: RatingScreen.kt  RatingScreenSortOption.kt  RatingScreenState.kt  (+1 more)
app/src/main/java/com/kaeonx/poweramphelper/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/kaeonx/poweramphelper/utils/: dateUtils.kt  uriUtils.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/kaeonx/poweramphelper/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
(+3 files in other folders)
